Recognize return insns even if the return appears in a parallel.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55885 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -2,6 +2,8 @@
 
 	* ifcvt.c (cond_exec_process_if_block): Fix a merging error.
 	Bail out early if false_expr is NULL and we'd crash due to this.
+	* genemit.c (gen_expand): Recognize return insns even if the return
+	appears in a parallel.
 
 2002-07-30  David Edelsohn  <edelsohn@gnu.org>
 	    Zack Weinberg  <zack@codesourcery.com>
