--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-30  Richard Henderson  <rth@redhat.com>
+
+	* ifcvt.c (noce_get_alt_condition): Use reg_overlap_mentioned_p.
+	(noce_process_if_block): Likewise.
+
 2002-07-30  Bernd Schmidt  <bernds@redhat.com>
 
 	* ifcvt.c (cond_exec_process_if_block): Fix a merging error.
