--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -25,7 +25,10 @@
 	Bail out early if false_expr is NULL and we'd crash due to this.
 	* genemit.c (gen_expand): Recognize return insns even if the return
 	appears in a parallel.
-
+	* libgcc2.c: Expand macro DECLARE_LIBRARY_RENAMES if it is defined.
+	* config/fp-bit.c: Likewise.
+	* doc/tm.texi: Document it.
+			
 2002-07-30  David Edelsohn  <edelsohn@gnu.org>
 	    Zack Weinberg  <zack@codesourcery.com>
 
