* java/awt/Frame.java (Frame): Remove println calls.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55901 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-07-31  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* java/awt/Frame.java (Frame): Remove println calls.
+
 2002-07-30  Jeff Sturm  <jsturm@one-point.com>
 
 	* configure.in (LIBFFIINCS): Don't prepend MULTIBUILDTOP.
