* config/mips/mips.md (eh_set_lr_si, eh_set_lr_di): Change 	constraints to 'd'.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55902 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-31  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/mips/mips.md (eh_set_lr_si, eh_set_lr_di): Change
+	constraints to 'd'.
+
 2002-07-30  Chris Demetriou  <cgd@broadcom.com>
 
 	* config/mips/elf.h (STARTFILE_SPEC): Define differently if
