* configure.host: Add SH support.         * sysdep/sh/locks.h: New file.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55922 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-01  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	* configure.host: Add SH support.
+        * sysdep/sh/locks.h: New file.
+
 2002-07-31  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* java/awt/Frame.java (Frame): Remove println calls.
