--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2002-08-01  Neil Booth  <neil@daikokuya.co.uk>
+
+	* c-common.c: Define all C/ObjC/C++ warning and flag variables.
+	* c-common.h: Declare all C/ObjC/C++ warning and flag variables.
+	* c-decl.c: Move all warning and flag variables to c-common.c.
+	* c-format.c: Move all warning variables to c-common.c.
+	* c-tree.h: Move all warning and flag declarations to c-common.h.
+	* objc/objc-act.c: Move all warning variables to c-common.c.
+	(flag_warn_protocol): Rename warn_protocol.
+
 2002-07-31  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* pa-linux.h (GLOBAL_ASM_OP): Fix typo.
