--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,14 @@
 2002-08-01  Neil Booth  <neil@daikokuya.co.uk>
 
+	* c-common.c (cb_register_builtins): If C++, define
+	__EXCEPTIONS, __DEPRECATED and __GXX_ABI_VERSION as appropriate.
+	* gcc.c (cpp_unique_options): Remove __GXX_ABI_VERSION.
+cp:
+	* lang-specs.h: Simplify in accordance with new code in
+	c-common.c.
+
+2002-08-01  Neil Booth  <neil@daikokuya.co.uk>
+
 	* c-common.c: Define all C/ObjC/C++ warning and flag variables.
 	* c-common.h: Declare all C/ObjC/C++ warning and flag variables.
 	* c-decl.c: Move all warning and flag variables to c-common.c.
