--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-01  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* expr.c (expand_assignment): Delete unused variable.
+
 2002-08-01  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* c-common.c (cb_register_builtins): Set
