--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-01  Benjamin Kosnik   <bkoz@redhat.com>
+
+        * g++.old-deja/g++.abi/ptrflags.C (expect): Change
+	__qualifier_flags to __flags.
+
 2002-07-31  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/inherit/operator1.C: New test.
