* config/mips/mips.md: Add [!]TARGET_MIPS16 to sgtu conditions.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@55943 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-01  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/mips/mips.md: Add [!]TARGET_MIPS16 to sgtu conditions.
+
 2002-08-01  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
 
 	* gcse.c (expr_hash_table_size, n_exprs, set_hash_table_size,
