--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-01  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* gcc.c: Set __GXX_ABI_VERSION to 102.
+
 2002-07-30  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	* gcc.c (cpp_unique_options): Define __GXX_ABI_VERSION, bump it to 101.
