--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-01  Aldy Hernandez  <aldyh@redhat.com>
+
+	* config/rs6000/rs6000.h (SPU_CONST_OFFSET_OK): Change to 0xff.
+
 2002-08-01  Neil Booth  <neil@daikokuya.co.uk>
 
 	* c-common.c (__GXX_ABI_VERSION): Correct spelling.
