--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2002-08-01  Ian Dall  <ian@sibyl.beware.dropbear.id.au>
+
+	* config/ns32k/ns32k.h (TARGET_IEEE_COMPARE): Correct earlier patch.
+	(RETURN_ADDR_RTX): Cannot determine return address for FRAME > 0
+	when there is no frame pointer.
+	(INITIAL_FRAME_POINTER_OFFSET): Count stack space for saved fp
+	registers properly.
+	* config/ns32k/__unorddf2.c: New file.
+	* config/ns32k/__unordsf2.c: New file.
+	* config/ns32k/t-ns32k: New file.
+	* config.gcc (ns32k-*-netbsd*): Use it.
+
 2002-08-01  Aldy Hernandez  <aldyh@redhat.com>
 
 	* config/rs6000/rs6000.h (SPU_CONST_OFFSET_OK): Change to 0xff.
